# codewars

./: .gitignore  README.md
.github/workflows/: Dockerfile  cmake.yml  documentation.yml  entrypoint.sh  msvc-analysis.yml
C++/: CMakeLists.txt  Doxygen_config  build.bat  main.cpp
C++/7kyu/: 7kyu.h  CMakeLists.txt
C++/7kyu/include/: cigarStringsEasy.h  convertTheScore.h  everyPossibleSumOfTwoDigits.h  fixStringCase.h  leonardoNumbers.h  offloadYourWork.h  queueTimeCounter.h  redacted.h  removeDuplicateWords.h  smoothNumbers.h  stringPacketBasedCommunication.h  subarrayElementsSum.h  sumOfABeach.h  tramCapacity.h
C++/7kyu/src/: cigarStringsEasy.cpp  convertTheScore.cpp  everyPossibleSumOfTwoDigits.cpp  fixStringCase.cpp  leonardoNumbers.cpp  offloadYourWork.cpp  queueTimeCounter.cpp  redacted.cpp  removeDuplicateWords.cpp  smoothNumbers.cpp  stringPacketBasedCommunication.cpp  subarrayElementsSum.cpp  sumOfABeach.cpp  tramCapacity.cpp
C++/8kyu/: 8kyu.h  CMakeLists.txt
C++/8kyu/include/: returnLocation.h
C++/8kyu/src/: returnLocationTest.cpp
