include_directories("${PROJECT_SOURCE_DIR}/7kyu/include")

add_library(7kyu src/redacted.cpp
                 src/sumOfABeach.cpp
                 src/tramCapacity.cpp
                 src/fixStringCase.cpp
                 src/smoothNumbers.cpp
                 src/convertTheScore.cpp
                 src/leonardoNumbers.cpp
                 src/offloadYourWork.cpp
                 src/cigarStringsEasy.cpp
                 src/queueTimeCounter.cpp
                 src/subarrayElementsSum.cpp
                 src/removeDuplicateWords.cpp
                 src/everyPossibleSumOfTwoDigits.cpp
                 src/stringPacketBasedCommunication.cpp
                 )
